--- a/article/cn/commenttest.html
+++ b/article/cn/commenttest.html
@@ -74,16 +74,14 @@
         .comment-container {
             width: 100%;
             margin-top: 20px;
-            overflow: hidden; /* 隐藏 iframe 滚动条 */
-           min-height: 200px; /* Set initial height */
+             /* Removed overflow: hidden; */
         }
-        .comment-iframe {
+         .comment-iframe {
             width: 100%;
             border: none;
-            display: block;
-            transition: height 0.3s ease-in-out; /* 可选：添加高度过渡效果 */
-            min-height: 200px; /* Set initial height */
-        }
+             min-height: 600px; /* Set initial height */
+             display: block;
+         }
     </style>
 </head>
 <body>
@@ -149,14 +147,28 @@
             const currentLang = document.documentElement.lang || 'zh-CN';
             commentFrame.src = `https://comment.joyance.page/embed/area/test-1?theme=${currentTheme}&lang=${currentLang}`;
         }
-
+         function fixLikeButton(){
+             const commentFrame = document.getElementById('commentFrame');
+                if (!commentFrame) return;
+            commentFrame.contentWindow.likeComment = async (commentId) => {
+            const isEmbed = window.self !== window.top;
+           let baseUrl = location.origin;
+           const res = await fetch( baseUrl + '/area/test-1/comment/' + commentId + '/like', { method: 'POST' });
+                 if (res.ok) {
+                      commentFrame.contentWindow.location.reload();
+            } else {
+               commentFrame.contentWindow.showNotification('Operation failed: ' + (await res.text()));
+            }
+         }
+    }
         window.onload = function() {
             loadArticle();
             updateCommentIframeTheme();
+              fixLikeButton();
         };
 
         // 监听 prefers-color-scheme 变化
-         window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', updateCommentIframeTheme);
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', updateCommentIframeTheme);
 
         // 监听页面自身主题变化 (如果你的页面有切换主题的功能)
         const toggleThemeBtn = document.querySelectorAll('#toggleTheme'); // 假设你的主题切换按钮有这个 ID
