--- a/article/cn/commenttest.html
+++ b/article/cn/commenttest.html
@@ -142,6 +142,11 @@
                const commentId = event.data.commentId;
                likeComment(commentId);
            }
+           // 监听 iframe 的 reloadComments 消息
+            if (event.data.type === 'reloadComments') {
+              updateCommentIframeTheme();
+            }
+
          });
 
         function updateCommentIframeTheme() {
@@ -156,8 +161,8 @@
            async function likeComment(commentId) {
               const res = await fetch(`https://comment.joyance.page/area/test-1/comment/${commentId}/like`, { method: 'POST' });
                  if (res.ok) {
-                      //  成功点赞后，可以给iframe发消息，让其更新评论列表
-                       document.getElementById('commentFrame').contentWindow.postMessage({ type: 'reloadComments' }, '*');
+                     //  成功点赞后，可以给iframe发消息，让其更新评论列表
+                     document.getElementById('commentFrame').contentWindow.postMessage({ type: 'reloadComments' }, '*');
                  } else {
                      console.error('点赞失败:', await res.text());
                  }
